--- a/app/assets/stylesheets/2_project/artist-panel.css.scss
+++ b/app/assets/stylesheets/2_project/artist-panel.css.scss
@@ -1,70 +1,69 @@
 .artist-panel {
-  background: white;
+  background: #E9E8F4;
   color: #2a2b2c;
   line-height: 1.6em;
+  position: relative;
+  
 
   .inner {
-    padding: 20px 20px 40px;
+    padding: 20px 60px 80px;
     font-size: 19px;
-    opacity: 0;
-    @include transition(opacity 500ms ease);
   }
 
-  h3 {
-    font-family: 'Playfair Display', serif;
-    font-size: 25px;
-    margin-bottom: 20px;
-    @include transform(translateY(10px));
+  .columns {
+		@media screen and (min-width: 700px){
+			@include columns(2);
+		}
   }
 
-  h3,.columns, .artist-footer {
-    @include transition(transform 400ms ease-out);
+  .artist-footer{
+    text-align: center;
+    padding: 20px 0 0;
+  }
+}
+
+.artist-details {
+  @include inline-block();
+  vertical-align: middle;
+}
+
+.artist-info {
+	height: 75px;
+  overflow: hidden;
+  padding: 10px 20px;
+	margin-bottom: 10px;
+
+  &.expanded {
+    height: auto;
   }
 
   .circular {
     @include inline-block;
-    position:absolute;
-    float: left;
-    left: 50%;
-    top: -38px;
-    margin-left: -37.5px;
+		vertical-align: middle;
     width: 75px;
     height: 75px;
+		margin-right: 10px;
   }
 
-  .close {
-    position: absolute;
-    right: 15px;
-    top: 10px;
-    cursor: pointer;
-    font-size: 20px;
-    padding: 0 5px;
-    z-index: 4;
+  h3 {
+    font-family: 'Playfair Display', serif;
+    font-size: 18px;
+    line-height: 20px;
+  }
+
+  span {
     @include inline-block();
-  }
+    text-transform: uppercase;
+    font-size: 12px;
+    line-height:12px;
+    font-style: italic;
 
-  .columns {
-    @include columns(2);
-    @include transform(translateY(20px));
-  }
-
-  footer.artist-footer{
-    text-align: center;
-    padding: 20px 0 0;
-    @include transform(translateY(40px));
-  }
-
-  &.active {
-    .inner {
-      opacity: 1;
-    }
-
-    h3,
-    .columns,
-    .artist-footer {
-      @include transform(translateY(0));
+    a {
+      font-weight: bold;
     }
   }
 }
 
-
+.artist-expanded {
+  padding: 10px 0;
+}
