--- a/app/assets/stylesheets/2_project/header.css.scss
+++ b/app/assets/stylesheets/2_project/header.css.scss
@@ -1,49 +1,120 @@
-#site-header {
-  background: rgba(255,255,255,0);
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 10;
-  @include transition(background 300ms ease);
-
-  .inner {
-    overflow: hidden;
-    padding-top: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-  }
-
-  .navigation {
-    float: right;
-  }
+.logo {
+  @include inline-block();
 
   a {
-    color: rgba(0,0,0,.3);
-    text-transform: uppercase;
+    font-family: 'Josefin Slab', serif;
+    text-transform: none;
     text-decoration: none;
-    font-weight: 300;
-    padding: 35px 10px;
-    @include transition(color 300ms ease);
-  }
-
-  &:hover {
-    background: rgba(255,255,255,1);
-
-    a {
-      color: rgba(0,0,0,1);
-    }
+    color: black;
+    font-size: 20px;
   }
 }
 
+#header-active {
+  background: black;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 10;
+  opacity: 0;
+  @include transform(translate(0, -100%));
+  @include transition(transform 200ms ease, opacity 200ms ease);
 
-#site-logo {
-  float: left;
+  .inner {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    overflow: hidden;
+    text-align: justify;
+    font-size:0;
+    line-height: 0;
 
-  a {
-    font-size: 24px;
-    background: rgba(255,255,255,.6);
-    padding: 30px;
+    &:after{
+      content: '';
+      @include inline-block();
+      width: 100%;
+      height: 0;
+      font-size:0;
+      line-height:0;
+    }
+
+    * {
+      line-height: 1.2em;
+    }
+  }
+
+
+  h1 {
+    text-align: center;
+    border-radius: 50%;
+    background: white;
+    width: 65px;
+    height: 65px;
+    
+    a {
+      margin-top: 21px;
+      @include inline-block();
+    }
+  }
+
+  .navigation {
+    @include inline-block();
+
+    li {
+      margin: 0 5px;
+    }
+
+    a {
+      color: white;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 100;
+      font-size: 22px;
+      line-height: 1.2em;
+    }
+  }
+
+  .close {
+    color: white;
+    text-decoration: none;
+    font-size: 22px;
     @include inline-block();
   }
 }
 
+.active #header-active {
+  opacity: 1;
+  @include transform(translate(0, 0));
+}
+
+#header-resting {
+  background: white;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 8;
+
+  .inner {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    overflow: hidden;
+    text-align: justify;
+    font-size:0;
+    line-height: 0;
+
+    &:after{
+      content: '';
+      @include inline-block();
+      width: 100%;
+      height: 0;
+      font-size:0;
+      line-height:0;
+    }
+
+    * {
+      line-height: 1.2em;
+    }
+  }
+
+  a {
+    font-size: 20px;
+  }
+}
