--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,12 +1,23 @@
 <header id='site-header' >
-  <div class='inner'>
-    <h1 id='site-logo'><a href='/'>hum</a></h1>
-    <nav class='navigation'>
-      <ul>
-        <li><a href='/works'>Work</a></li>
-        <li><a href=''>Dialogue</a></li>
-        <li><a href=''>About</a></li>
-      </ul>
-    </nav>
+  <div id='header-active'>
+    <div class='inner'>
+      <h1 id='site-logo' class='logo'><a href='/'>hum</a></h1>
+      <nav class='navigation'>
+        <ul>
+          <li><a href='/works'>Work</a></li>
+          <li><a href=''>Dialogue</a></li>
+          <li><a href='/about'>About</a></li>
+        </ul>
+      </nav>
+
+      <a class='close' href='#'>X</a>
+    </div>
+  </div>
+
+  <div id='header-resting'>
+    <div class='inner'>
+      <h1 id='site-logo-resting' class='logo'><%= link_to 'hum', root_path %></h1>
+      <a href='#' id='menu'>menu</a>
+    </div>
   </div>
 </header>
