--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,6 +1,6 @@
 <header id='site-header' >
   <div id='header-active'>
-    <div class='inner'>
+    <div class='inner w1200'>
       <h1 id='site-logo' class='logo'><a href='/'>hum</a></h1>
       <nav class='navigation'>
         <ul>
@@ -15,7 +15,7 @@
   </div>
 
   <div id='header-resting'>
-    <div class='inner'>
+    <div class='inner w1200'>
       <h1 id='site-logo-resting' class='logo'><%= link_to 'hum', root_path %></h1>
       <a href='#' id='menu'>menu</a>
     </div>
