--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,23 +1,27 @@
 <header id='site-header' >
   <div id='header-active'>
-    <div class='inner w1200'>
-      <h1 id='site-logo' class='logo'><a href='/'>hum</a></h1>
-      <nav class='navigation'>
-        <ul>
-          <li><a href='/works'>Work</a></li>
-          <li><a href=''>Dialogue</a></li>
-          <li><a href='/about'>About</a></li>
-        </ul>
-      </nav>
+    <div class='inner w1100'>
+      <div class='padding'>
+        <h1 id='site-logo' class='logo'><a href='/'>hum</a></h1>
+        <nav class='navigation'>
+          <ul>
+            <li><a href='/issues/1'>Issue 1</a></li>
+            <li><a href=''>Dialogue</a></li>
+            <li><a href='/about'>About</a></li>
+          </ul>
+        </nav>
 
-      <a class='close' href='#'>X</a>
+        <a class='close' href='#'>X</a>
+      </div>
     </div>
   </div>
 
   <div id='header-resting'>
-    <div class='inner w1200'>
-      <h1 id='site-logo-resting' class='logo'><%= link_to 'hum', root_path %></h1>
-      <a href='#' id='menu'>menu</a>
+    <div class='inner w1100'>
+      <div class='padding'>
+        <h1 id='site-logo-resting' class='logo'><%= link_to 'hum', root_path %></h1>
+        <a href='#' id='menu'>menu</a>
+      </div>
     </div>
   </div>
 </header>
