--- a/app/views/issues/_issue.html.erb
+++ b/app/views/issues/_issue.html.erb
@@ -1,4 +1,4 @@
-<div class='issue'>
+<div class='issue section-scroll-wrapper'>
   <%= render 'nav' %>
   <% @issue.artists.each do |artist| %>
     <%= render artist %>
