--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -32,7 +32,7 @@
                 </a>
                 <h2 class='playfair'>See issue one</h2>
                 <p class='blurb'>explore the work of over 25 of Boston's most talented visual artists and writers</p>
-                <a href='/works'><i class="fa fa-long-arrow-right"></i></a>
+                <a href='/issues/1'><i class="fa fa-long-arrow-right"></i></a>
               </div>
             </div>
           </div>
