--- a/app/assets/stylesheets/1_base/layout.css.scss
+++ b/app/assets/stylesheets/1_base/layout.css.scss
@@ -1,4 +1,4 @@
-.inner {
+.padding{
   padding: 0px 20px;
 }
 
@@ -10,6 +10,11 @@
 
 .w1200 {
   max-width: 1200px;
+  margin: 0 auto;
+}
+
+.w1100 {
+  max-width: 1100px;
   margin: 0 auto;
 }
 
