--- a/app/assets/stylesheets/2_project/header.css.scss
+++ b/app/assets/stylesheets/2_project/header.css.scss
@@ -20,7 +20,7 @@
   @include transform(translate(0, -100%));
   @include transition(transform 200ms ease, opacity 200ms ease);
 
-  .inner {
+  .padding {
     padding-top: 10px;
     padding-bottom: 10px;
     overflow: hidden;
@@ -92,7 +92,7 @@
   width: 100%;
   z-index: 8;
 
-  .inner {
+  .padding {
     padding-top: 10px;
     padding-bottom: 10px;
     overflow: hidden;
