--- a/app/views/artists/_artist.html.erb
+++ b/app/views/artists/_artist.html.erb
@@ -1,12 +1,12 @@
-<div class='artist w1200' id='<%= artist.name %>'>
-  <div class='inner'>
+<div class='artist w1100 section-scroll-section' id='<%= artist.parameterized_name %>'>
+  <div class='padding'>
     <h1 class='huge green playfair' style="color:<%= artist.color %>"><%= artist.name %></h1>
     <%= image_tag(artist.photo.url, class: 'artist-photo circular') %>
     <div class='artist-bio'>
       <div class='bio-inner' style="border-color:<%= artist.color %>">
         <p><%= artist.bio %></p>
         <footer class='artist-footer'>
-          <%= link_with_target_text artist.link %>
+        <%= link_with_target_text artist.link %>
         </footer>
       </div>
     </div>
