--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,5 +1,5 @@
 <header id='site-header' >
-  <div id='header-active'>
+  <div id='header'>
     <div class='inner w1100'>
       <div class='padding'>
         <h1 id='site-logo' class='logo'><a href='/'>hum</a></h1>
@@ -10,17 +10,6 @@
             <li><a href='/about'>About</a></li>
           </ul>
         </nav>
-
-        <a class='close' href='#'>X</a>
-      </div>
-    </div>
-  </div>
-
-  <div id='header-resting'>
-    <div class='inner w1100'>
-      <div class='padding'>
-        <h1 id='site-logo-resting' class='logo'><%= link_to 'hum', root_path %></h1>
-        <a href='#' id='menu'>menu</a>
       </div>
     </div>
   </div>
