--- a/app/assets/stylesheets/2_project/header.css.scss
+++ b/app/assets/stylesheets/2_project/header.css.scss
@@ -1,74 +1,76 @@
 .logo {
   @include inline-block();
+  vertical-align: middle;
+  width: 100px;
+  height: 38px;
 
   a {
-    font-family: 'Josefin Slab', serif;
-    text-transform: none;
-    text-decoration: none;
-    color: black;
-    font-size: 20px;
+    width: 100%;
+    height: 100%;
+    background: url(image-path('new-hum-logo-white.png')) center center no-repeat;
+    background-size: 100% 100%;
+    display: block;
+    text-indent: -9999px;
   }
 }
 
-#header-active {
+#header{
   background: black;
   position: fixed;
   width: 100%;
   top: 0;
   z-index: 10;
-  opacity: 0;
-  @include transform(translate(0, -100%));
-  @include transition(transform 200ms ease, opacity 200ms ease);
 
   .padding {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align:justify;
     overflow: hidden;
-    text-align: justify;
-    font-size:0;
-    line-height: 0;
+    margin-bottom: -1em;
 
-    &:after{
+    &:before {
       content: '';
-      @include inline-block();
+      display: block;
       width: 100%;
-      height: 0;
-      font-size:0;
-      line-height:0;
+      // margin-bottom: -1.2em;
     }
 
-    * {
-      line-height: 1.2em;
-    }
-  }
-
-
-  h1 {
-    text-align: center;
-    border-radius: 50%;
-    background: white;
-    width: 65px;
-    height: 65px;
-    
-    a {
-      margin-top: 21px;
-      @include inline-block();
+    &:after {
+      content: '';
+      display: inline-block;
+      width: 100%;
     }
   }
 
   .navigation {
     @include inline-block();
+    vertical-align: middle;
+
+    ul {
+      margin: 0;
+      padding: 0;
+    }
 
     li {
-      margin: 0 5px;
+      margin-right: 10px;
+
+      &:last-child {
+        margin-right: 0;
+      }
     }
 
     a {
       color: white;
+      color: rgba(255,255,255,.8);
       font-family: 'Open Sans', sans-serif;
       font-weight: 100;
-      font-size: 22px;
+      font-size: 16px;
       line-height: 1.2em;
+      padding: 5px 10px;
+      border: 1px solid white;
+      border-color: rgba(255,255,255,.8);
+      text-decoration: none;
+      font-style: italic;
     }
   }
 
